--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -85,7 +85,6 @@ ol {
 }
 
 .post-info {
-    float:right;
     margin:10px;
     padding:5px;
 }
@@ -160,7 +159,7 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	}
 	#banner h1 a:hover, #banner h1 a:active {
 		background: none;
-		color: #C74350;
+		color: #5A495A;
 		text-shadow: none;
 	}
 	
@@ -194,7 +193,7 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	}
 	#banner nav a:hover, #banner nav a:active,
 	#banner nav .active a:link, #banner nav .active a:visited {
-		background: #C74451;
+		background: #5A495A;
 		color: #fff;
 		text-shadow: none !important;
 	}
