--- a/theme/templates/article_infos.html
+++ b/theme/templates/article_infos.html
@@ -1,14 +1,8 @@
 <footer class="post-info">
-        <abbr class="published" title="{{ article.date.isoformat() }}">
-                {{ article.locale_date }}
-        </abbr>
-
-        {% if article.author %}
-        <address class="vcard author">
-                By <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>
-        </address>
-        {% endif %}
-<p>In <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>. {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">get the pdf</a>{% endif %}</p>
-{% include 'taglist.html' %}
-{% include 'translations.html' %}
+    <i>
+        By <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>, 
+        published on <time datetime="{{ article.date.strftime('%Y-%m-%d') }}" pubdate="pubdate">{{ article.date.strftime('%Y-%m-%d') }}</time>
+        in <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>.
+    </i>
+    {% include 'taglist.html' %}
 </footer><!-- /.post-info -->
