Change background color, remove favicon in the wrong place

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -16,7 +16,7 @@
 /***** Global *****/
 /* Body */
 body {
-    background: #F5F4EF;
+    background: #D6EBFF;
     color: #121612;
     font-size: 87.5%; /* Base font size: 14px */
     font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
