--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ article.title }}{% endblock %}
+{% block title %}:w! {{ article.title }}{% endblock %}
 {% block content %}        
 <section id="content" class="body">    
     <article>
