--- a/theme/templates/footer_custom.html
+++ b/theme/templates/footer_custom.html
@@ -1,3 +1,4 @@
 <p class="copyright text-muted">
-    &copy; 2012-2017 Paul Moss. All Rights Reserved.
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </p>
